--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,19 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "angular-emotion": [
+        "dist/angular-emotion"
+      ],
+      "angular-emotion/*": [
+        "dist/angular-emotion/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "enableIvy": true
   }
 }
