--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -117,6 +117,41 @@
             "production": {
               "devServerTarget": "styled-angular:serve:production"
             }
+          }
+        }
+      }
+    },
+    "angular-emotion": {
+      "projectType": "library",
+      "root": "projects/angular-emotion",
+      "sourceRoot": "projects/angular-emotion/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/angular-emotion/tsconfig.lib.json",
+            "project": "projects/angular-emotion/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/angular-emotion/src/test.ts",
+            "tsConfig": "projects/angular-emotion/tsconfig.spec.json",
+            "karmaConfig": "projects/angular-emotion/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/angular-emotion/tsconfig.lib.json",
+              "projects/angular-emotion/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
