--- a/projects/angular-emotion/tsconfig.lib.json
+++ b/projects/angular-emotion/tsconfig.lib.json
@@ -17,7 +17,7 @@
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
     "enableResourceInlining": true,
-    "enableIvy": true
+    "enableIvy": "ngtsc"
   },
   "exclude": [
     "src/test.ts",
