--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~9.0.0-rc.3",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.3",
     "@angular/router": "~9.0.0-rc.3",
+    "angular-emotion": "file:dist/angular-emotion/angular-emotion-0.0.1.tgz",
     "emotion": "^9.2.12",
+    "normalize.css": "^8.0.1",
     "rxjs": "~6.5.3",
     "styled-system": "^5.1.2",
     "tslib": "^1.10.0",
@@ -31,9 +33,10 @@
     "@angular/cli": "~9.0.0-rc.3",
     "@angular/compiler-cli": "~9.0.0-rc.3",
     "@angular/language-service": "~9.0.0-rc.3",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "@types/styled-system": "^5.1.4",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
